set(R2_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/..)
set(R2_INCLUDE_DIRS ${R2_ROOT} ${R2_ROOT}/avx512 ${R2_ROOT}/avx2 ${R2_ROOT}/scalar)

set(R2_TEST_ISA_FLAGS "")
set(R2_TEST_ISA "scalar")
if(VFFT_HAS_AVX512)
    set(R2_TEST_ISA "AVX512")
    set(R2_TEST_ISA_FLAGS -mavx512f -mavx512dq -mavx2 -mfma)
elseif(VFFT_HAS_AVX2)
    set(R2_TEST_ISA "AVX2")
    set(R2_TEST_ISA_FLAGS -mavx2 -mfma)
endif()

function(_r2_add_target name source)
    cmake_parse_arguments(ARG "" "" "ISA_FLAGS" ${ARGN})
    add_executable(${name} ${source})
    target_include_directories(${name} PRIVATE ${R2_INCLUDE_DIRS})
    if(ARG_ISA_FLAGS)
        target_compile_options(${name} PRIVATE ${ARG_ISA_FLAGS})
    endif()
    target_compile_options(${name} PRIVATE ${VFFT_BASE_FLAGS})
    set_target_properties(${name} PROPERTIES C_STANDARD ${VFFT_C_STANDARD})
    if(VFFT_BASE_DEFINITIONS)
        target_compile_definitions(${name} PRIVATE ${VFFT_BASE_DEFINITIONS})
    endif()
    if(NOT WIN32)
        target_link_libraries(${name} PRIVATE m)
    endif()
    add_test(NAME ${name} COMMAND ${name})
endfunction()

_r2_add_target(test_radix2_dispatch test_radix2.c ISA_FLAGS ${R2_TEST_ISA_FLAGS})
set_tests_properties(test_radix2_dispatch PROPERTIES LABELS "radix2;correctness;${R2_TEST_ISA}")
message(STATUS "[radix2/tests] test_radix2_dispatch [${R2_TEST_ISA}]")

get_property(_tests DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY TESTS)
list(LENGTH _tests _n)
message(STATUS "[radix2/tests] ${_n} target(s) registered")
